Fix Art.Nr spacing, improve hyphens support

--- a/src/styles/products.module.css
+++ b/src/styles/products.module.css
@@ -12,6 +12,12 @@
     minmax(1em, 1fr);  
     
   grid-template-rows: 50px auto auto;
+
+-webkit-hyphens: auto;
+   -moz-hyphens: auto;
+    -ms-hyphens: auto;
+        hyphens: auto;
+
 }
 
 /* Position content */
