--- a/src/styles/sidebar.module.css
+++ b/src/styles/sidebar.module.css
@@ -11,6 +11,8 @@
 
 @media only screen and (min-width: 1200px) {
   aside {
+    grid-row: 2;
+    -ms-grid-row: 2;
     grid-column: 1;
     -ms-grid-column: 1;
   }
